feat(s3stream): compact to composite object
Signed-off-by: Robin Han <hanxvdovehx@gmail.com>